--- a/index.html
+++ b/index.html
@@ -1,16 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizapp</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
-   <script src="script.js"></script>
+    <script src="script.js"></script>
+
+    <!-- Bootstrap files -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
 
 </head>
-<body>
-    
+
+<body onload="init()">
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">Quizapp</span>
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="card" style="width: 30rem;">
+            <img src="img/header.jpg" class="card-img-top" alt="...">
+
+            <div class="card-body" id="endScreen" style="display:none;">
+                <div>Quiz beenet!</div>
+                <div><img src="img/done.jpg"></div>
+
+            </div>
+
+
+            <div class="card-body" id="mainArea">
+                <h5 class="card-title" id="question">Frage</h5>
+
+                <div class="card mb-2 quiz_answer_card">
+                <div class="card-body" id="1" onclick="answer('1')">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="card mb-2 quiz_answer_card">
+                    <div class="card-body" id="2" onclick="answer('2')">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="card mb-2 quiz_answer_card">
+                    <div class="card-body" id="3" onclick="answer('3')">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="question_footer">
+                    <span>
+                        <b id="currentQuestion"></b> von <b id="amountOfQuestions"></b> Fragen
+                    </span>
+
+
+                    <button onclick="nextQuestion()" class="btn btn-primary" id="next-button" disabled>Nächste Frage</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
