last bug fixing and cleaning the code

--- a/index.html
+++ b/index.html
@@ -29,14 +29,11 @@
 
     <div class="container">
         <div class="card" style="width: 30rem;">
-            <img src="img/header.jpg" class="card-img-top" alt="...">
+            <img src="img/header.jpg" id="header-image" class="card-img-top">
 
-            <div class="card-body" id="endScreen" style="display:none;">
-                <div>Quiz beenet!</div>
-                <div><img src="img/done.jpg"></div>
-
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="progressPercent">0%</div>
             </div>
-
 
             <div class="card-body" id="mainArea">
                 <h5 class="card-title" id="question">Frage</h5>
